#35 Renamed generic param from ID to K to be consistent with `AssemblerBuilder` and `Rule`